# mini-redis

./: Cargo.toml  README.md
idl/: mini_redis.thrift
src/: lib.rs
src/handler/: del.rs  get.rs  mod.rs  model.rs  publish.rs  set.rs  subscribe.rs
volo-gen/: volo.yml
