[package]
name = "mini_redis"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-thrift.workspace = true
pilota.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
parking_lot = "0.12.1"
lazy_static = "1.4.0"
faststr = "0.2.11"
clap = { version = "4.4.2", features = ["derive", "cargo"] }

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-thrift = "*"
pilota = "*"

anyhow = "1"
async-trait = "0.1"
tokio = "1"
